# TC2037-Evidence-2

./: evidence.aux  evidence.bbl  evidence.blg  evidence.fdb_latexmk  evidence.fls  evidence.tex  parser.ipynb  pyproject.toml  resources.bib
